--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<table style="width: 100%; height: 100%;">
 			<tr style="height: 1em;">
 				<td>
-					<a href="index.html"><button class="btn btn-primary" translate>Reload</button></a>
+					<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
 				</td>
 			</tr>
 			<tr>
@@ -108,19 +108,63 @@
 	</div>
 </div>
 						</script>
+						<script type="text/ng-template" id="StartContainerModalContent.html">
+<div class="StartContainerModal">
+	<div class="modal-header">
+		<h3 translate>Start a container</h3>
+	</div>
+	<div class="modal-body">
+		<table>
+			<tr>
+				<th style="vertical-align: top;">
+					<div>PortBindings</div>
+					<div><button ng-click="PortBindings.push({})" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span></button></div>
+				</th>
+				<td>
+					<table>
+						<tr>
+							<th translate>Port Type</th>
+							<th translate>Public Port</th>
+							<th translate>Private Port</th>
+						</tr>
+						<tr ng-repeat="pb in PortBindings">
+							<td>
+								<select ng-options="tp for tp in ['TCP', 'UDP']" ng-model="pb.porttype" ng-init="pb.porttype='TCP'"></select>
+							</td>
+							<td>
+								<input type="text" ng-model="pb.pubports" placeholder="80 8080"/>
+							</td>
+							<td>
+								<input type="text" ng-model="pb.priport" placeholder="80"/>
+							</td>
+							<td>
+								<button ng-click="PortBindings.splice($index, 1)" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-remove"></span></button>
+							</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+		</table>
+	</div>
+	<div class="modal-footer">
+		<button class="btn btn-primary" ng-click="ok()" translate>OK</button>
+		<button class="btn btn-warning" ng-click="cancel()" translate>Cancel</button>
+	</div>
+</div>
+						</script>
 						<div>
 							<span translate>Containers</span>
-							<button ng-click="reload()" class="btn btn-default">
+							<button ng-click="reload()" class="btn btn-default btn-sm">
 								<span class="glyphicon glyphicon-refresh"></span>
 							</button>
-							<button ng-show="curtab" ng-click="attach()" class="btn btn-primary" translate>Back</button>
+							<button ng-show="curtab" ng-click="attach()" class="btn btn-primary btn-sm" translate>Back</button>
 							<span ng-repeat="c in tabs">
-								<button class="btn btn-primary" title="{{c.Id}}" ng-click="attach(c)">{{c.name}}</button>
-								<button class="btn btn-primary" ng-click="closeContainer(c)">X</button>
+								<button class="btn btn-primary btn-sm" title="{{c.Id}}" ng-click="attach(c)">{{c.name}}</button>
+								<button class="btn btn-primary btn-sm" ng-click="closeContainer(c)">X</button>
 							</span>
-							<button ng-click="openCreateContainerModal()" class="btn btn-info" translate>Create</button>
+							<button ng-click="openCreateContainerModal()" class="btn btn-info btn-sm" translate>Create</button>
 						</div>
-						<table ng-show="!curtab">
+						<table ng-show="!curtab" style="margin-top: 1em;">
 							<tr>
 								<th translate>ID</th>
 								<th translate>Description</th>
@@ -144,18 +188,23 @@
 									<span class="ellipsis" style="display: inline-block; max-width: 10em;" tooltip="{{c.Command}}">{{c.Command}}</span>
 								</td>
 								<td>
-									<div ng-repeat="p in c.Ports"><a href="http://{{DockerData.host}}:{{p.PublicPort}}/" target="_blank">
-										<span ng-show="p.Type != 'tcp'">{{p.Type}}: </span>{{p.PublicPort}} -&gt; {{p.PrivatePort}}
-									</a></div>
+									<div ng-repeat="p in c.Ports">
+										<a ng-show="p.PublicPort && p.PrivatePort" href="http://{{DockerData.host}}:{{p.PublicPort}}/" target="_blank">
+											<span ng-show="p.Type != 'tcp'">{{p.Type}}: </span>{{p.PublicPort}} -&gt; {{p.PrivatePort}}
+										</a>
+										<span ng-show="!p.PublicPort || !p.PrivatePort">
+											<span ng-show="p.Type != 'tcp'">{{p.Type}}: </span> -&gt; {{p.PublicPort}}{{p.PrivatePort}}
+										</span>
+									</div>
 								</td>
 								<td>
 									<span>{{c.Status}}</span>
 								</td>
 								<td>
-									<button ng-click="attach(c)" class="btn btn-primary" translate>Attach</button>
-									<button ng-click="start(c)" ng-show="!c.running" class="btn btn-info" translate>Start</button>
-									<button ng-click="stop(c)" ng-show="c.running" class="btn btn-warning" translate>Stop</button>
-									<button ng-click="remove(c)" ng-show="!c.running" class="btn btn-danger" translate>Remove</button>
+									<button ng-click="attach(c)" class="btn btn-primary btn-xs" translate>Attach</button>
+									<button ng-click="openStartContainerModal(c)" ng-show="!c.running" class="btn btn-info btn-xs" translate>Start</button>
+									<button ng-click="stop(c)" ng-show="c.running" class="btn btn-warning btn-xs" translate>Stop</button>
+									<button ng-click="remove(c)" ng-show="!c.running" class="btn btn-danger btn-xs" translate>Remove</button>
 								</td>
 							</tr>
 						</table>
