add grunt-angular-templates for speed up

--- a/index.src.html
+++ b/index.src.html
@@ -20,6 +20,9 @@
 		<script src="index/CreateContainerModalCtrl.js"></script>
 		<script src="index/StartContainerModalCtrl.js"></script>
 		<script src="index/index.js"></script>
+		<!-- no load in dev mode
+		<script src="index/index.ngtpl.tmp.js"></script>
+		-->
 		<!-- endbuild -->
 	</head>
 	<body ng-controller="IndexCtrl" style="padding: 10px;">
