--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="index/index.min.js"></script>
 	</head>
 	<body ng-controller="IndexCtrl" style="padding: 10px;">
+		<div style="position: absolute; left: 1em; bottom: 1em;">v{{version}}</div>
 		<table style="width: 100%; height: 100%;">
 			<tr style="height: 1em;">
 				<td>
@@ -60,7 +61,7 @@
 					<div ng-controller="ContainerCtrl" ng-show="tab == 'Containers'">
 						<div class="tab-header-bar">
 							<span translate>Containers</span>
-							<button ng-click="reload()" class="btn btn-default">
+							<button ng-click="curtab=null;reload()" class="btn btn-default">
 								<span class="glyphicon glyphicon-refresh"></span>
 							</button>
 							<button ng-show="curtab" ng-click="attach()" class="btn btn-primary" translate>Back</button>
