--- a/index.src.html
+++ b/index.src.html
@@ -26,7 +26,7 @@
 		<!-- endbuild -->
 	</head>
 	<body ng-controller="IndexCtrl" style="padding: 10px;">
-		<div style="position: absolute; left: 1em; bottom: 1em;">v{{version}}</div>
+		<div style="position: absolute; left: 1em; bottom: 1em;">v{{DockerData.version}}</div>
 		<table style="width: 100%; height: 100%;">
 			<tr style="height: 1em;">
 				<td>
