--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
 		<div style="position: absolute; left: 1em; bottom: 1em;">v{{DockerData.version}}</div>
 		<table style="width: 100%; height: 100%;">
 			<tr style="height: 1em;">
-				<td>
-					<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
-					<select ng-model="locale" ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change="updateLocale()" style="position: absolute; top: 1em; right: 1em;"></select>
+				<td colspan="2">
+					<table style="width: 100%;">
+						<tr>
+							<td style="vertical-align: top; width: 1em;">
+								<a href="."><button class="btn btn-primary">KDocker-Web</button></a>
+							</td>
+							<td style="padding: 0em 0.5em;">
+								<alert style="margin: 0em; padding: 0.4em 1em;" ng-repeat="alert in alerts" type="alert.type" close="alerts.splice($index, 1)" ng-click="alerts.splice($index, 1)">{{alert.msg}}</alert>
+							</td>
+							<td style="vertical-align: top; width: 1em;">
+								<select ng-model="locale" ng-options="lang.id as lang.name for lang in DockerData.locales" ng-change="updateLocale()"></select>
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 			<tr>
