--- a/index/CreateContainerModalContent.html
+++ b/index/CreateContainerModalContent.html
@@ -42,6 +42,12 @@
 					</button>
 				</td>
 			</tr>
+			<tr>
+				<th translate>ExposedPorts</th>
+				<td>
+					<input type="text" ng-model="form.ExposedPorts" placeholder="22 80 8080 53/udp"/>
+				</td>
+			</tr>
 			<tr ng-repeat="key in ['Hostname', 'User']" ng-show="moreOptions">
 				<th translate>{{key}}</th>
 				<td>
